// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default wrapper render render the component 1`] = `
<div>
  <div
    class="chakra-container css-1wy61kz"
  >
    <div
      class="chakra-container css-1vggzwa"
    >
      <div>
        Test
      </div>
    </div>
  </div>
</div>
`;

exports[`default wrapper render should contain the css with background image 1`] = `
<div>
  <div
    class="chakra-container css-1v6mmd1"
  >
    <div
      class="chakra-container css-1vggzwa"
    >
      <div>
        Test
      </div>
    </div>
  </div>
</div>
`;
